# jules

./: .gitignore  .jules-config.yml  .pre-commit-config.yaml  .yamllint.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  copier.yml  pyproject.toml  zensical.toml
.changes/unreleased/: Added-20260401-google-jules-skills.yaml  Added-20260401-issue-role-and-scope.yaml  Changed-20260401-claude-skills-layout.yaml  add-infra-role.yaml  add-issue-triage-workflow.yaml  added-copier-template.yaml  added-devcontainer.yaml  added-docs-site.yaml  added-renderer-cli.yaml  added-skill-jules-actions.yaml  added-skill-jules-prompt.yaml  added-skill-jules-test.yaml  added-snapshot-tests.yaml  added-workflow-templates.yaml  changed-link-changie-install-guide.yaml  changed-package-consolidation.yaml  changed-prompts-migration.yaml  fixed-ci-failure-fix-loop.yaml  fixed-swe-negative-filter.yaml
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.githooks/: pre-push
.github/workflows/: ci.yml  jules-issue-dispatch.yml  notify-slack-review.yml  release.yml  speckit-cleanup.yml  triage.yml
docs/: getting-started.md  index.md
docs/customisation/: config-reference.md  custom-roles.md
docs/prompts/: anatomy.md
docs/templates/: docs.md  infra.md  security.md  swe.md
prompts/shared/: docs-instructions.md
skill/jules-action/: SKILL.md
skill/jules-prompt/: SKILL.md
skill/jules-test/: SKILL.md
src/jules/: __init__.py  render.py
templates/: defaults.yml  jules-dispatch.yml.j2
tests/: conftest.py  test_examples.py  test_render.py  test_validate.py
(+36 files in other folders)
