[project]
authors = [{name = "RDL", email = "tsv-datalab@health.qld.gov.au"}]
dependencies = ["jinja2", "pyyaml", "zensical>=0.0.30,<0.0.31"]
name = "jules-templates"
description = "Jules AI agent dispatch workflow templates and generator"
requires-python = ">= 3.11"
version = "0.1.0"
license = "Apache-2.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/jules"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = ">=3.11"
jinja2 = "*"
pyyaml = "*"

[tool.pixi.pypi-dependencies]
jules-templates = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
pytest = "*"
ruff = "*"
yamllint = "*"
pre-commit = "*"

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
generate = "python -m jules.render"
validate = "python -m jules.render --validate"
test = "pytest tests/ -v"
lint = "ruff check src/ tests/ && yamllint templates/ .claude/skills/"
format = "ruff format src/ tests/"
docs = "zensical serve"
docs-build = "zensical build"

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
